fixed the prev commit

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -126,7 +126,7 @@ jobs:
           echo "Python script output: $python_output"
           eval "$python_output"
 
-          cp ${GITHUB_WORKSPACE}/test/cpp/tutorial_save_image*/* cd  ${GITHUB_WORKSPACE}/cpp
+          cp ${GITHUB_WORKSPACE}/test/cpp/tutorial_save_image*/* ${GITHUB_WORKSPACE}/cpp
 
           valgrind --leak-check=full ./tutorial5_parse_image_bin_data --use-dummy-data --quiet
 
