--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -6,10 +6,10 @@ on:
       - '*'  # This will run the build and test jobs for pull requests to all branches
 
 env:
-  SDK_VERSION: v24.09.04
-  ION_CONTRIB_PYTHON: 3.2.3
-  ARAVIS_PYTHON: 0.8.31
-  GENDC_PYTHON: 0.3.3
+  SDK_VERSION: v24.09.08
+  ION_CONTRIB_PYTHON: 3.2.6
+  ARAVIS_PYTHON: 0.8.31.post1
+  GENDC_PYTHON: 0.3.5
 
 jobs:
   test-cpp:
